--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
     "nuxt": "^3.0.0",
+    "sass": "^1.57.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -24,7 +25,9 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0"
   },
   "eslintConfig": {
     "root": true,
