--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
     "nuxt": "^3.0.0",
+    "pinia": "^2.0.28",
     "sass": "^1.57.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
