--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "firebase": "^9.15.0",
     "nuxt": "^3.0.0",
     "pinia": "^2.0.28",
     "sass": "^1.57.1",
