--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "backend": "json-server --watch db.json --port8080"
   },
   "dependencies": {
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
     "firebase": "^9.15.0",
+    "json-server": "^0.17.1",
     "nuxt": "^3.0.0",
     "pinia": "^2.0.28",
     "sass": "^1.57.1",
