--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -31,7 +31,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^8.0.0",
-    "sass-loader": "^13.2.0"
+    "sass-loader": "^13.2.0",
+    "vue-cli-plugin-pinia": "^0.2.3"
   },
   "eslintConfig": {
     "root": true,
